src/test/deca/context/invalid/class_already_defined.deca
//ERROR 5
class A{

}
class A{

}